GNOME Bugzilla – Bug 740584
jawcomponent.c is not has no style
Last modified: 2015-02-27 16:57:45 UTC
The formatting in this file is all over the place, making it very difficult to read what's going on.
Created attachment 291319 [details] [review] Patch to address problem
Review of attachment 291319 [details] [review]: committed to resolve issue.
[Moving at-spi/java-atk-wrapper bugs to separate product. See bug 740075]