jawcomponent: fix formatting

Bug: https://bugzilla.gnome.org/show_bug.cgi?id=740584